# c-software-wireframe-renderer

./: CMakeLists.txt
src/: Renderer.c  Renderer.h  engine.c  engine.h  main.c  utils.h
src/DataStructures/: Figure.c  Figure.h  Line2D.c  Line2D.h  Lines2D.h  Matrix.c  Matrix.h  Plane.c  Plane.h  Vector2Df.c  Vector2Df.h  Vector2f.c  Vector2f.h  Vector3Df.c  Vector3Df.h  Vector3f.c  Vector3f.h
src/utils/: utils.c  utils.h
